data/derived/comb/progs/unify/prog4930.ml.out
Characters 50-66:
  mulByDigit (h*i);;
  ^^^^^^^^^^^^^^^^
Error: This expression has type int list -> 'a
       but an expression was expected of type 'a
       The type variable 'a occurs inside int list -> 'a
